fixes z-index

--- a/src/scss/_loading-screen.scss
+++ b/src/scss/_loading-screen.scss
@@ -5,7 +5,7 @@
   background-color: white;
   width: 100vw;
   height: 100vh;
-  z-index: 1000;
+  z-index: 9999;
   display: none;
   flex-direction: column;
   align-items: center;
