--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,7 +30,7 @@
 
 .cart-wrapper {
   position: fixed;
-  z-index: 9999;
+  z-index: 9998;
   &,
   .cart-overlay,
   .cart {
